--- a/index.html
+++ b/index.html
@@ -1,29 +1,53 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-		  <title>Fixed Top Navigation Toolbar</title>
-		  <meta name="author" content="Jake Rocheleau">
-		  <link rel="shortcut icon" href="http://designshack.net/favicon.ico">
-		  <link rel="icon" href="http://designshack.net/favicon.ico">
-		  <link rel="stylesheet" type="text/css" media="all" href="style.css">
-		  <link rel="stylesheet" type="text/css" media="all" href="http://fonts.googleapis.com/css?family=Capriola">
-		  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<title>OFL Online</title>
+		<link href="/stickyNavbar.js-master/animate.min.css" rel="stylesheet" type="text/css" />
+		<link href="style.css" rel="stylesheet" type="text/css" />
+		<script src="script-main.js" type="text/javascript" ></script>
 
 	</head>
 <body>
 	<div id="w">
-  <header id="logo"><a href="index.html"><span id="logobg">SomeWebsiteLogo</span></a></header>
-  
-<nav id="fixedbar">
-  <ul id="fixednav">
+		<div id="header" class="header">
+<nav id="nav">
+<ul>
     <li><a href="#">Homepage</a></li>
+    <li><a href="#">Images</a></li>
+    	<ul>
+    		<li><a href="#">Fan Art</a></li>
+    		<li><a href="#">Our Edits &amp; Arts</a></li>
+    		<li><a href="#">Our Image Collection</a></li>
+    	</ul>
+    <li><a href="#">Anime</a></li>
+    	<ul>
+    		<li><a href="#">Reviews</a></li>
+    		<li><a href="#">Our Amv's</a></li>
+    		<li><a href="#">Music List</a></li>
+    	</ul>
+    <li><a href="#">Events</a></li>
     <li><a href="#">About Us</a></li>
-    <li><a href="#">Community</a></li>
-    <li><a href="#">Staff Members</a></li>
-    <li><a href="#">Contact</a></li>
+    	<ul>
+    		<li><a href="#">Our Social Networks</a></li>
+    		<li><a href="#">Join the community</a></li>
+    		<li><a href="#">Contact Us</a></li>
+    	</ul>
+    <li><a href="#">Shonen Jump News Board</a></li>
   </ul>
 </nav>
+</div>
+<div id="home" class="scrollto">
+    <!-- Your content goes here -->
+</div>
+<div id="about" class="scrollto">
+    <!-- Your content goes here -->
+</div>
+<div id="services" class="scrollto">
+    <!-- Your content goes here -->
+</div>
+<div id="contact" class="scrollto">
+    <!-- Your content goes here -->
+</div>
 
 <div id="content">
   <!-- content here -->
@@ -48,5 +72,8 @@ $(document).ready(function(){
   });
 });
 </script>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="//cdn.jsdelivr.net/stickynavbar.js/1.1.2/jquery.stickyNavbar.min.js"></script>
 </body>
 </html>
