--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>OFL Online</title>
-		<link href="/stickyNavbar.js-master/animate.min.css" rel="stylesheet" type="text/css" />
-		<link href="style.css" rel="stylesheet" type="text/css" />
-		<script src="script-main.js" type="text/javascript" ></script>
-
+	<title>OFL Online</title>
+	
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="http://www.w3schools.com/bs/css/bootstrap_w3schools.css">
+   
+    <link rel="stylesheet" href="style.css">
+    <script src="jquery.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 	</head>
 <body>
-	<div id="w">
-		<div id="header" class="header">
-<nav id="nav">
-<ul>
+	
+<nav>
+		<ul class="nav nav-pills topnav">
     <li><a href="#">Homepage</a></li>
     <li><a href="#">Images</a></li>
     	<ul>
@@ -35,45 +39,6 @@
     <li><a href="#">Shonen Jump News Board</a></li>
   </ul>
 </nav>
-</div>
-<div id="home" class="scrollto">
-    <!-- Your content goes here -->
-</div>
-<div id="about" class="scrollto">
-    <!-- Your content goes here -->
-</div>
-<div id="services" class="scrollto">
-    <!-- Your content goes here -->
-</div>
-<div id="contact" class="scrollto">
-    <!-- Your content goes here -->
-</div>
 
-<div id="content">
-  <!-- content here -->
-  </div>
-</div>
-<script type="text/javascript">
-$(document).ready(function(){
-  $('#navigation a, #fixedbar a').on('click', function(e) {
-    e.preventDefault();
-  });
-   
-  $(window).on('scroll',function() {
-    var scrolltop = $(this).scrollTop();
- 
-    if(scrolltop >= 215) {
-      $('#fixedbar').fadeIn(250);
-    }
-     
-    else if(scrolltop <= 210) {
-      $('#fixedbar').fadeOut(250);
-    }
-  });
-});
-</script>
-<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="//cdn.jsdelivr.net/stickynavbar.js/1.1.2/jquery.stickyNavbar.min.js"></script>
 </body>
 </html>
